dev-staging/dev-staging-security-group-elb.json
{
  "AWSTemplateFormatVersion" : "2010-09-09",
  "Description" : "DevStaging ELB Security Group Stack",

  "Resources" : {
      "DevStagingServerSecurityGroup": {
           "Type": "AWS::EC2::SecurityGroup",
           "Properties": {
               "VpcId": { "Fn::ImportValue" : {"Fn::Sub" : "dev-staging-network-DevStagingVpc" } },
               "GroupName": "dev-staging-elb-security-group",
               "GroupDescription": "DevStaging ELB Security Group",
               "Tags" : [ {"Key" : "Name", "Value" : "DevStaging ELB Security Group"} ],
               "SecurityGroupIngress": [
                      {
                        "IpProtocol": "tcp",
                        "FromPort": "443",
                        "ToPort": "443",
                        "CidrIp" : "184.69.74.246/32"
                      }
                ],
                "SecurityGroupEgress": [
                      {
                        "IpProtocol": "tcp",
                        "FromPort": "443",
                        "ToPort": "443",
                        "SourceSecurityGroupId": { "Fn::ImportValue" : {"Fn::Sub" : "dev-staging-security-group-server-DevStagingServerSecurityGroup"} }
                      },
                      {
                        "IpProtocol": "tcp",
                        "FromPort": "1024",
                        "ToPort": "65535",
                        "SourceSecurityGroupId": { "Fn::ImportValue" : {"Fn::Sub" : "dev-staging-security-group-server-DevStagingServerSecurityGroup"} }
                      }
                ]
           }
       }
   },

   "Outputs" : {


    }

}
