dev-staging/dev-staging-security-group-server-UPDATE.json
{
  "AWSTemplateFormatVersion" : "2010-09-09",
  "Description" : "DevStaging Server Security Group Stack",

  "Resources" : {
      "DevStagingServerSecurityGroup": {
           "Type": "AWS::EC2::SecurityGroup",
           "Properties": {
               "VpcId": { "Fn::ImportValue" : {"Fn::Sub" : "dev-staging-network-DevStagingVpc" } },
               "GroupName": "dev-staging-server-security-group",
               "GroupDescription": "DevStaging Server Security Group",
               "Tags" : [ {"Key" : "Name", "Value" : "DevStaging Server Security Group"} ],
               "SecurityGroupIngress": [
                      {
                        "IpProtocol": "tcp",
                        "FromPort": "443",
                        "ToPort": "443",
                        "CidrIp" : "0.0.0.0/0"
                      }
                ],
                "SecurityGroupEgress": [
                      {
                        "IpProtocol": "tcp",
                        "FromPort": "443",
                        "ToPort": "443",
                        "CidrIp" : "0.0.0.0/0"
                      },
                      {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp" : "0.0.0.0/0"
                      },
                      {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp" : "0.0.0.0/0"
                      },
                      {
                        "IpProtocol": "tcp",
                        "FromPort": "19999",
                        "ToPort": "19999",
                        "CidrIp" : "184.69.74.246/32"
                      },
                      {
                        "IpProtocol": "udp",
                        "FromPort": "53",
                        "ToPort": "53",
                        "CidrIp" : "8.8.8.8/32"
                      },
                      {
                        "IpProtocol": "tcp",
                        "FromPort": "5432",
                        "ToPort": "5432",
                        "SourceSecurityGroupId": { "Fn::ImportValue" : {"Fn::Sub" : "dev-staging-security-group-data-DevStagingDataSecurityGroup"} }
                      }
                ]
           }
       }
   },

   "Outputs" : {

       "OutputDevStagingServerSecurityGroup" : {
           "Description" : "Output DevStaging Server Security Group",
           "Value" :  { "Ref" : "DevStagingServerSecurityGroup" },
           "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-DevStagingServerSecurityGroup" }}
       }
    }

}
